// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: IconPreview - prop name is marked as required 1`] = `
<i
  aria-hidden="true"
  className="payment-icon payment-icon-undefined"
/>
`;

exports[`Component: IconPreview - prop size is an enum with specified allowed values 1`] = `
<div>
  <i
    aria-hidden="true"
    className="material-icons material-icons-tiny"
  >
    visa
  </i>
  <i
    aria-hidden="true"
    className="payment-icon payment-icon-small payment-icon-amex"
  />
  <i
    aria-hidden="true"
    className="payment-icon payment-icon-medium payment-icon-diners"
  />
  <i
    aria-hidden="true"
    className="payment-icon payment-icon-large payment-icon-mastercard"
  />
  <i
    aria-hidden="true"
    className="payment-icon payment-icon-huge payment-icon-mobilepay"
  />
</div>
`;

exports[`Component: IconPreview - prop size is an enum with specified allowed values 2`] = `
<i
  aria-hidden="true"
  className="payment-icon payment-icon-test payment-icon-amex"
/>
`;

exports[`Component: IconPreview - prop type has specific allowed values 1`] = `
<div>
  <i
    aria-hidden="true"
    className="material-icons"
  />
  <i
    aria-hidden="true"
    className="payment-icon payment-icon-undefined"
  />
  <i
    aria-hidden="true"
    className="flag-icon flag-icon-undefined"
  />
</div>
`;

exports[`Component: IconPreview - prop type has specific allowed values 2`] = `
<i
  aria-hidden="true"
  className="payment-icon payment-icon-undefined"
/>
`;

exports[`Component: IconPreview - renders 1`] = `
<i
  aria-hidden="true"
  className="payment-icon payment-icon-amex"
/>
`;

exports[`Component: IconPreview - renders a material icon when type is equal to material-icons 1`] = `
<i
  aria-hidden="true"
  className="material-icons"
>
  android
</i>
`;

exports[`Component: IconPreview - renders a preview wrapper around material-icon when prop previewSize is true 1`] = `
<div
  className="icon-preview"
>
  <i
    aria-hidden="true"
    className="material-icons material-icons-large"
  >
    android
  </i>
  <code
    className="code-tags code-tags-secondary mt-2"
  >
    large
  </code>
</div>
`;

exports[`Component: IconPreview - renders a preview wrapper around the <i> tag when prop preview is true 1`] = `
<div
  className="icon-preview"
>
  <i
    aria-hidden="true"
    className="payment-icon payment-icon-amex"
  />
  <code
    className="code-tags code-tags-secondary mt-2"
  >
    amex
  </code>
</div>
`;

exports[`Component: IconPreview - renders correct icon when prop name is provided 1`] = `
<i
  aria-hidden="true"
  className="payment-icon payment-icon-amex"
/>
`;

exports[`Component: IconPreview - renders correct size when prop size is provided 1`] = `
<i
  aria-hidden="true"
  className="payment-icon payment-icon-large payment-icon-amex"
/>
`;

exports[`Component: IconPreview - renders icon with custom when prop className is provided 1`] = `
<i
  aria-hidden="true"
  className="payment-icon payment-icon-amex test test2 test-3"
/>
`;
